# mljboard

./: Cargo.toml  README.md
.github/workflows/: freebsd.yml
src/: lib.rs  main.rs  state.rs
src/hos/: hos_handler.rs  hos_holder.rs  json.rs  mod.rs  state.rs
src/hos_interf/: mod.rs
src/leaderboard/: main_page.rs  mod.rs
src/maloja_backend/: direct.rs  hos.rs  mod.rs  requests.rs  traits.rs
static/: index.html
templates/: board_main_page.html
