[package]
name = "mljboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = "4.4.0"
actix-ws = "0.2.5"
base64 = "0.21.5"
chrono = "0.4.31"
clap = "4.4.8"
crossbeam = { version = "0.8.2", features = ["crossbeam-channel"] }
env_logger = "0.10.1"
futures-util = { version = "0.3.29", features = ["std"] }
log = "0.4.20"
mljcl = { git = "https://github.com/duckfromdiscord/mljcl/", version = "0.3.1" }
once_cell = "1.18.0"
serde = "1.0.193"
serde_derive = "1.0.193"
serde_json = "1.0.108"
serde_qs = "0.12.0"
tokio = { version = "1.34.0", features = ["rt", "time", "macros"] }
uuid = { version = "1.6.1", features = ["v4"] }
websocket = "0.27.0"
